# Alexa-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml
scripts/: login_helper.py
src/: main.rs
src/api/: alarms.rs  automations.rs  behaviors.rs  devices.rs  dnd.rs  errors.rs  history.rs  lists.rs  media.rs  mod.rs  reminders.rs  smart_home.rs  timers.rs
src/auth/: cbl.rs  cookie_store.rs  csrf.rs  device_login.rs  login.rs  mod.rs  oauth.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: alarm.rs  ask.rs  auth.rs  devices.rs  dnd.rs  history.rs  media.rs  mod.rs  reminder.rs  routines.rs  shopping.rs  smart_home.rs  speak.rs  timer.rs  todo.rs
src/config/: settings.rs
tests/: integration_alarms.rs  integration_devices.rs  integration_dnd.rs  integration_history.rs  integration_lists.rs  integration_media.rs  integration_reminders.rs  integration_routines.rs  integration_smart_home.rs  integration_speak.rs  integration_timers.rs
tests/common/: mod.rs
